Fix close button click issue on mobile and improve hit area in modal, update contact section design for mobile and desktop

--- a/assets/css/media.css
+++ b/assets/css/media.css
@@ -1,31 +1,13 @@
 @media (min-width: 31.25rem) {
     /* 500px / 16 = 31.25 */
 
-
-    /* .card {
-        min-width: 256px;
-    } */
-
-    .about,
-    .project,
-    .contact {
+    .--page {
         padding: 4rem;
-    }
-
-    .about p {
-
-        text-align: justify;
-        line-height: 1.5em;
     }
 }
 
 @media (min-width: 37.5rem) {
-    /* 600 / 16 = 37.5 */
-
-    .hero p {
-        padding: 0 4rem;
-        margin: 0 4rem;
-    }
+    /* 600px / 16 = 37.5 */
 
     .card__profile {
         min-width: unset;
@@ -38,7 +20,7 @@
 }
 
 @media (min-width: 43.75rem) {
-    /* 700 / 16 = 43.75 */
+    /* 700px / 16 = 43.75 */
 
     .title {
         font-size: 5rem;
@@ -54,17 +36,14 @@
         max-height: 550px;
     }
 
-
+    .card {
+        min-width: 350px;
+    }
 
     .card__img:nth-last-of-type(2) img {
 
         object-position: top center;
 
-    }
-
-
-    .card {
-        min-width: 350px;
     }
 
     .card__content {
@@ -78,49 +57,81 @@
 }
 
 @media(min-width: 62.5rem) {
-    /* 1000 / 16 = 62.5*/
 
-    .contact__form-container {
-        max-width: 1000px;
-    }
-
-    .contact__form {
-        padding: 1rem;
-        flex-direction: row;
-        flex-wrap: wrap;
-    }
-
-    .label__container {
-        width: 49%;
-        flex-direction: row;
-        align-items: center;
-    }
-
-
-
-    .contact__form label {
+    /* 1000px / 16 = 62.5*/
+    .contact .title {
         display: none;
     }
 
+    .contact__form-container {
+        max-width: 1000px;
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+    }
+
+
+    .contact__content {
+        border: 1px solid #000;
+        padding: 3rem;
+        display: flex;
+        flex-direction: column;
+        font-family: "Montserrat", sans-serif;
+        background-color: #1f2526;
+        color: #fff;
+    }
+
+    .contact__content h3 {
+        margin-bottom: 4rem;
+        font-size: 2.5rem;
+        font-weight: 500;
+        line-height: 1.5em;
+    }
+
+    .contact__content p span {
+        margin-bottom: 10px;
+        display: block;
+        font-weight: 600;
+    }
+
+    .contact__content p {
+        margin-bottom: 3rem;
+        color: #fff;
+        letter-spacing: 1px;
+    }
+
+    .contact__form {
+        padding: 3rem;
+        flex-direction: row;
+        flex-wrap: wrap;
+        background-color: #fff;
+    }
+
+    .label__container {
+        width: 100%;
+        display: block;
+    }
 
     input[type="text"] {
         width: 100%;
-        padding: 0.8rem;
+        margin-top: 10px;
+        padding: 5px;
+        background-color: #fff;
     }
 
     label[for="msg"],
     textarea {
-        margin-top: 1rem;
         flex-basis: 100%;
     }
 
     textarea {
-        min-height: 200px;
+        min-height: 150px;
+        background-color: #fff;
     }
 
     .contact__btn {
         padding: 1.5rem;
-        width: 25%;
+        width: 100%;
+        font-size: 1.3rem;
     }
 
     .btn:hover {
@@ -135,7 +146,7 @@
 }
 
 @media (min-width: 75rem) {
-    /* 1200 / 16 = 75 */
+    /* 1200px / 16 = 75 */
 
     html {
         font-size: 75%;
@@ -197,4 +208,8 @@
         margin: 0 5rem;
     }
 
+    .contact__btn {
+        padding: 1rem;
+        font-size: 1.2rem;
+    }
 }
