--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -50,7 +50,7 @@ p {
 }
 
 .wrapper {
-    background-color: #EDE2D7;
+    background-color: #ede2d7;
     position: relative;
 }
 
@@ -177,19 +177,23 @@ nav {
 }
 
 .contact__form-container {
+    /* border: 2px solid #111111; */
     width: 95%;
     max-width: 500px;
-    padding: 2rem 1rem;
+    padding: 1.5rem;
+    /* box-shadow: 0 2px 3px rgba(0, 0, 0, 0.3); */
 }
 
 .contact__form {
+
     display: flex;
     flex-direction: column;
     gap: 10px;
 }
 
 .contact__form label {
-    font-size: 1.4rem;
+    font-size: 1.1rem;
+    /* font-weight: 600; */
 }
 
 .label__container {
@@ -200,27 +204,34 @@ nav {
 
 input[type="text"],
 textarea {
-    padding: 1rem;
+    margin-bottom: 1rem;
+    padding: 1rem 0.5rem;
     font-family: "Montserrat", sans-serif;
     font-size: 1.2rem;
     line-height: 1.5em;
-    border: none;
-    border-radius: 3px;
-    box-shadow: 0 0 3px rgba(0, 0, 0, 0.3);
+    border-top: none;
+    border-right: none;
+    border-bottom: 2px solid #111111;
+    border-left: none;
+    /* border-radius: 2px; */
+    background-color: #ede2d7;
+    /* box-shadow: 0 0 3px rgba(0, 0, 0, 0.3); */
 }
 
 textarea {
-    min-height: 100px;
+    min-height: 150px;
     resize: none;
 }
 
 input[type="text"]:focus,
 textarea:focus {
-    outline: 2px solid #e59700;
+    /* outline: 2px solid #e59700; */
+    outline: none;
 }
 
 input::placeholder,
 textarea::placeholder {
+    color: #111111;
     transition: opacity 0.2s ease;
 }
 
@@ -233,6 +244,10 @@ textarea:focus::placeholder {
 .contact__btn {
     width: 100%;
     font-weight: 500;
+}
+
+.contact__content {
+    display: none;
 }
 
 
@@ -309,7 +324,7 @@ textarea:focus::placeholder {
 }
 
 .pop__close {
-    margin: 20px 10px 10px 10px;
+    padding: 20px;
     align-self: flex-end;
 }
 
